All links added

--- a/public/index.html
+++ b/public/index.html
@@ -75,15 +75,15 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_board.0607afda106f917e8ab4.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth_sheet_front.fbb31d7809513c46963a.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth_sheet_back.22e71b3c1749701ac990.png" />
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_YogSothoth_sheet_front.845e405c27294d9855aa.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_YogSothoth_sheet_back.9ad4d4f6e9455c8a2cc9.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_ShubNiggurath_sheet_front.d143b142b8f16e0e9bc6.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_ShubNiggurath_sheet_back.91454e98f887a4d3cd35.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_sheet_front.9df6305e5eb2ed9e18ab.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_sheet_back.d4690e670f166e9c4603.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth_Mystery.aefa1ae69da269f64448.png" />
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Yog-Sothoth_Mystery.bc728c88e0b3f769b6f4.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Shub-Niggurath_Mystery.28095bd088031475cd15.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery.d11e11eebcf41f308bdb.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_Card.61fd1e5e2846951c3b88.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas.d0f2f3e154ee48e904d3.png" />
@@ -99,23 +99,23 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionTunguska.839cc2784b85cec1145d.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_ExpeditionDefeat.aebd8a1703d8c627a638.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_AzathothResearch.dea1b4efa633d5cc9b5d.png" />
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothResearch.aa89b7271aa62c47b95c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothSpecial.dd06e24670892e4795b9.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Shub-NiggurathResearch.0f0e59eecc250b7e7ff6.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch.7c4f92b780d7c6bf4c89.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial.5bde04014867f8129e3f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth_Mystery_Front_1.b46476c3aa2fd3a7b4d5.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth_Mystery_Front_2.0e5d688eb357879cea7d.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth_Mystery_Front_3.2a592e8a5762af68ad37.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth_Mystery_Front_4.bae79f62a71f87f24648.png" />
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Yog-Sothoth_Mystery_Front_1.26d36bb6ae7ea1f69331.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Yog-Sothoth_Mystery_Front_2.e579dbc0290d3d317510.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Yog-Sothoth_Mystery_Front_3.f0041d094739f0031fe3.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Yog-Sothoth_Mystery_Front_4.9507f88937e69915bc7d.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Shub-Niggurath_Mystery_Front_1.fb4dd69df67188f7129c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Shub-Niggurath_Mystery_Front_2.92c90a8005dd351b7a09.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Shub-Niggurath_Mystery_Front_3.a0efa815529ea50cd827.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Shub-Niggurath_Mystery_Front_4.fc034a41d8eafd1f8142.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery_Front_1.ee1a45df52bb922ab015.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery_Front_2.db24d680760ed6831372.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_Mystery_Front_3.1dcf08f6757d82a558ec.png" />
@@ -315,28 +315,28 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_AzathothResearch_Front_6.f47df469891fae86d823.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_AzathothResearch_Front_7.92a0f71d8041e8193fca.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_AzathothResearch_Front_8.ac9fa04cf1eef7ee19b1.png" />
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
-    <!-- <link rel="preload" as="image" href="" /> -->
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothResearch_Front_1.87e6bae10c695cdf94cc.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothResearch_Front_2.9997fbc552d00b5e88ac.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothResearch_Front_3.92262d59daa7e3095f4b.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothResearch_Front_4.7cc5fc8b5c3957c30f86.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothResearch_Front_5.0814364649298ae3e9b6.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothResearch_Front_6.7c9cfa6be872600c815c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothResearch_Front_7.270c7cb9cfb644752670.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothResearch_Front_8.8278533e39d7909684b9.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothSpecial_Front_1.f798d6aa759252920913.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothSpecial_Front_2.ad84f1abfdbdaf4f4bde.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothSpecial_Front_3.483679c9b2faa04d66fb.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothSpecial_Front_4.5c6e192029a35fcb3642.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothSpecial_Front_5.68d3fb413ff84407c779.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Yog-SothothSpecial_Front_6.d52ded91fd944d6f1701.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Shub-NiggurathResearch_Front_1.54a555e6015ce961881b.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Shub-NiggurathResearch_Front_2.18c0ea79e73779c602e9.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Shub-NiggurathResearch_Front_3.8367dbc7974628323aa1.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Shub-NiggurathResearch_Front_4.aa9427cdb24293721dc5.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Shub-NiggurathResearch_Front_5.a0d0a352ed9bca3754ab.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Shub-NiggurathResearch_Front_6.5f1837115cc881bc0553.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Shub-NiggurathResearch_Front_7.4fb733f8d0c781d7cbdd.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Shub-NiggurathResearch_Front_8.05f00c714c0e244390f6.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_1.29efe200e8bcb0155128.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_2.8ec90f77d38b66ec9a9f.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_3.7d503aeaa19d3f4dcd76.png" />
