All links added

--- a/public/index.html
+++ b/public/index.html
@@ -153,6 +153,10 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthyllaSlayed.a6bb886c42d1f698f0a7.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthulhu.0ecd43072009387d951a.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenCthulhuSlayed.5d3f0055be1926510f2b.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenNug.7561b7883f81b14241ad.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenNugSlayed.41b07b6fa72030c2176e.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenDunwichHorror.116196c2dd5547d1ca65.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenDunwichHorrorSlayed.e9b12e620dbc4a8c27bd.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenTickTockMenSlayed.4faa3824f3e4ddc2613e.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenWindWalkerSlayed.a4bf85c24fb75c9ef201.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenSpinnerOfWebsSlayed.59de5c9eb4592b5270e4.png" />
