added last image

--- a/public/index.html
+++ b/public/index.html
@@ -143,6 +143,7 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenFlip.e4bd593cf6472d06509c.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenSanity.6122752e858cc4ca3d70.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenGate.0e592c151182bbe06cd1.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenGateFaded.a28bfeaea31d75a7cc79.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenDoom.d403d323fcbf0ad9d5d9.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenKilling.a39d16b75ff1c5861163.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/TokenMinus.296a3ed2e38434e6ed2f.png" />
